# pedemais

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
categorias/: admin.py  models.py
categorias/migrations/: 0001_initial.py  0002_alter_category_name.py  0003_alter_category_name_category_unique_category_name.py  0004_remove_category_unique_category_name_and_more.py
config/: settings.py  urls.py
mesas/: models.py
mesas/migrations/: 0001_initial.py
pedidos/: admin.py  forms.py  models.py  urls.py  views.py
pedidos/migrations/: 0001_initial.py
produtos/: admin.py  models.py
produtos/migrations/: 0001_initial.py  0002_rename_produtos_product_and_more.py  0003_product_availability_alter_product_category.py  0004_alter_product_category.py  0005_alter_product_name_product_produto_ja_adicionado.py  0006_alter_product_price.py
produtos/templates/: pedidos_detail.html  pedidos_item_form.html  pedidos_list.html
templates/: index.html  pedidos_form.html
users/: models.py  views.py
users/migrations/: 0001_initial.py
users_app/: forms.py  models.py  urls.py
users_app/migrations/: 0001_initial.py
users_app/templates/users/: user_delete.html  user_form.html  user_list.html
